remove warnings, upgrade gradle